--- a/Homework6/css/style.css
+++ b/Homework6/css/style.css
@@ -4,6 +4,8 @@
 
 @import './services.css';
 
+@import './info.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 /* font-family: 'Kaushan Script', cursive; */
 
