--- a/Homework7/css/main.css
+++ b/Homework7/css/main.css
@@ -119,9 +119,19 @@ margin: auto;
         flex-wrap: wrap;
         justify-content: space-between;
         width: 480px;
+    } 
+
+    .second_card {
+         order: 2;
     }
 
-    
+    .third_card {
+       order: 1;
+    }
+
+    .quater_card {
+         order: 3;
+    }
 
     .partner {
         padding: 8px 31px;
@@ -135,7 +145,7 @@ margin: auto;
         width: 960px;
     }
 
-    .first_two {
+    /* .first_two {
         width: 449px;
         display: flex;
         flex-direction: row;
@@ -147,6 +157,6 @@ margin: auto;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    }
+    } */
 }
 
