--- a/FinalProject/css/reset.css
+++ b/FinalProject/css/reset.css
@@ -1,10 +1,10 @@
-
 * {
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    font-size: 0;
 }
 
 a {
